fixing a dde bug that caused urls that were over 255 chars to fail.  Bug 166872, r=law, sr=darin, a=sspitzer@netscape.com